--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "description": "",
   "author": "Kel Contributors",
-  "variants": [],
+  "variants": ["bundle", "container"],
   "models": ["deployment"]
 }
